added banner skills and profjecs

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,22 +1,26 @@
 <header [class.headerDark]="darkMode">
 
 
-
-
-
-
-
-
-
-
     <img *ngIf="!darkMode" routerLink="/" src="assets/img/logo_white.png">
     <img *ngIf="darkMode" routerLink="/" src="assets/img/logo_black.png">
 
     <div [class.darkLinks]="darkMode">
-        <a routerLink="/">Home</a>
-        <a routerLink="/data-protection">Data Protection</a>
-        <!-- <a href="#">Curriculum</a>
-        <a href="#">Projects</a> -->
-        <a routerLink="/imprint">Imprint</a>
+        <div class="links">
+            <a routerLink="/">HOME</a>
+            <a href="#">ABOUT</a>
+            <a href="#">PORTFOLIO</a>
+            <!-- <a routerLink="/data-protection">Data Protection</a> -->
+            <!-- <a routerLink="/imprint">Imprint</a> -->
+        </div>
     </div>
+
+    <div class="dropdown-menu d-none">
+        <span onclick="showMobileMenu()">&#9776;</span>
+        <div id="mobileMenu" class="mobile-menu">
+            <a routerLink="/">HOME</a>
+            <a href="#">ABOUT</a>
+            <a href="#">PORTFOLIO</a>
+        </div>
+    </div>
+
 </header>
