--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -19,7 +19,7 @@ header {
         font-weight: 500;
 
         &:hover {
-            color: rgba(255, 255, 255, 0.8);
+            color: #FA2759;
         }
     }
 
@@ -43,4 +43,47 @@ header {
 .headerDark {
     background-color: white;
     box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2);
+}
+
+@media (max-width: 700px)  {
+    header {
+        padding-left: 60px;
+        padding-right: 60px;
+    }
+}
+
+@media (max-width: 600px) {
+    header {
+        padding-left: 20px;
+        padding-right: 20px;
+        position: relative;
+    }
+    .links {
+        display: none;
+    }
+    .dropdown-menu {
+
+        span {
+            font-size: 40px;
+            cursor: pointer;
+        }
+        .mobile-menu {
+            display: flex;
+            flex-direction: column;
+            position: absolute;
+            left: 0;
+            right: 0;
+            background-color: #1A1A1A;
+            transform: translateY(-200%);
+            z-index: 0;
+
+            a {
+                padding-top: 8px;
+                padding-bottom: 8px;
+                width: 100%;
+                text-align: center;
+                margin: 0;
+            }
+        }
+    }
 }
