--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,9 @@
 body {
     margin: 0;
     font-family: 'Open Sans', sans-serif;
+    background-color: black;
+    color: white;
+}
+.d-none {
+    display: none !important;
 }
