--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,3 +1,9 @@
-<div class="container">
-    <p>projects works!</p>
+<div id="portfolio" class="container">
+    <h2>My Works</h2>
+    <div class="previews">
+        <div class="preview"><a href="http://mustafa-guer.developerakademie.com/Pokedex/index.html"><img src="../../assets/img/pokedex.jpg"></a></div>
+        <div class="preview"><a href="http://mustafa-guer.developerakademie.com/SHARKIE/index.html"><img src="../../assets/img/sharkie.png"></a></div>
+        <div class="preview"><a href="http://mustafa-guer.developerakademie.com/EL_POLLO_LOCO/index.html"><img src="../../assets/img/elpolloloco.png"></a></div>
+        <div class="preview"><a href="http://mustafa-guer.developerakademie.com/Join/html/login-submit.html"><img src="../../assets/img/join.PNG"></a></div>
+    </div>
 </div>
