--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -1,5 +1,5 @@
 <section class="container">
-    <h2>MY Skills</h2>
+    <h2>My Skills</h2>
     <div class="skillContainer">
         <div class="skillBoxes">
             <img src="../../assets/img/javascript-icon.png">
