--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
-<app-menu [darkMode]="router.url !== '/'"></app-menu>
-<div [class.container]="router.url !== '/'">
-    <router-outlet></router-outlet>
-</div>
+<app-menu></app-menu>
+<app-banner></app-banner>
 <app-skills></app-skills>
 <app-projects></app-projects>
+<app-about></app-about>
+<app-contact></app-contact>
+<app-footer></app-footer>
