--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -1,3 +1,60 @@
 .container {
     padding-top: 50px;
+    padding-bottom: 50px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+
+    h2 {
+        text-align: center;
+    }
+
+    .previews {
+        padding-top: 50px;
+        max-width: 1108px;
+        display: flex;
+        flex-wrap: wrap;
+
+        .preview {
+            margin-left: 27px;
+            margin-right: 27px;
+            margin-bottom: 27px;
+
+
+            img {
+                width: 500px;
+                height: 400px;
+                object-fit: cover;
+
+                &:hover {
+                    animation: zoomIn 1s ease;
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 1124px) {
+    .previews {
+        justify-content: center;
+    }
+}
+
+@media (max-width: 450px) {
+    .preview {
+
+        img {
+            width: 250px !important;
+            height: 250px !important;
+        }
+    }
+}
+
+@keyframes zoomIn {
+    from {
+        transform: scale(1);
+    }
+    to {
+        transform: scale(0.9);
+    }
 }
