some little changes

--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -8,5 +8,5 @@
             <img src="../../assets/img/img3.jpg">
         </div>
     </div>
-    <div class="arrowBox"><span>&#709;</span></div>
+    <!-- <div class="arrowBox"><span>&#709;</span></div> -->
 </div>
