--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -7,9 +7,9 @@
     </div>
 
     <div class="socialMediaLinks">
-        <a href="#"><img src="../../assets/img/linkedin-box-fill.png"></a>
-        <a href="#"><img src="../../assets/img/github-fill.png"></a>
-        <a href="#"><img src="../../assets/img/xing-fill.png"></a>
+        <a href="https://www.linkedin.com/in/mustafa-g%C3%BCr-47bb451ba" target="_blank" title="LinkedIn"><img src="../../assets/img/linkedin-box-fill.png"></a>
+        <a href="https://github.com/MustafaGuer" target="_blank" title="Github"><img src="../../assets/img/github-fill.png"></a>
+        <a href="https://www.xing.com/profile/Mustafa_Guer23/cv" target="_blank" title="Xing"><img src="../../assets/img/xing-fill.png"></a>
     </div>
 
 </footer>
