--- a/src/app/imprint/imprint.component.html
+++ b/src/app/imprint/imprint.component.html
@@ -9,7 +9,7 @@ Telefon: +49 176 24899531 <br>
 E-Mail: mustafaguer@outlook.com -->
 
 <div class='impressum'>
-    <h1>Impressum TRALALA</h1>
+    <h1>Impressum</h1>
     <p>Angaben gemäß § 5 TMG</p>
     <p>Mustafa Gür <br> Werinherstr.12
         <br> 81541 München <br>
