--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,14 @@
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     margin: 0;
     font-family: 'Open Sans', sans-serif;
     background-color: black;
     color: white;
 }
+
 .d-none {
     display: none !important;
 }
