--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -3,38 +3,29 @@
         <img src="../../assets/img/img3.jpg">
         <div>
             <h2>About Me</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur mollitia beatae tempora necessitatibus,
-                fugit, dolore quasi quaerat.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur mollitia beatae tempora necessitatibus, fugit, dolore quasi quaerat.</p>
         </div>
     </div>
     <div class="storySection">
         <div class="storyPart">
             <img src="../../assets/img/walk-line.png">
             <h3>MY JOURNEY BEGAN</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas nulla sed quae? Explicabo harum modi
-                repellendus dolorem reiciendis, odio sunt voluptas veritatis error totam similique accusantium beatae,
-                qui odit quaerat.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas nulla sed quae? Explicabo harum modi repellendus dolorem reiciendis, odio sunt voluptas veritatis error totam similique accusantium beatae, qui odit quaerat.</p>
         </div>
         <div class="storyPart">
             <img src="../../assets/img/heart-line.png">
             <h3>MY JOURNEY BEGAN</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas nulla sed quae? Explicabo harum modi
-                repellendus dolorem reiciendis, odio sunt voluptas veritatis error totam similique accusantium beatae,
-                qui odit quaerat.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas nulla sed quae? Explicabo harum modi repellendus dolorem reiciendis, odio sunt voluptas veritatis error totam similique accusantium beatae, qui odit quaerat.</p>
         </div>
         <div class="storyPart">
             <img src="../../assets/img/search-line.png">
             <h3>MY JOURNEY BEGAN</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas nulla sed quae? Explicabo harum modi
-                repellendus dolorem reiciendis, odio sunt voluptas veritatis error totam similique accusantium beatae,
-                qui odit quaerat.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas nulla sed quae? Explicabo harum modi repellendus dolorem reiciendis, odio sunt voluptas veritatis error totam similique accusantium beatae, qui odit quaerat.</p>
         </div>
         <div class="storyPart">
             <img src="../../assets/img/flight-takeoff-line.png">
             <h3>MY JOURNEY BEGAN</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas nulla sed quae? Explicabo harum modi
-                repellendus dolorem reiciendis, odio sunt voluptas veritatis error totam similique accusantium beatae,
-                qui odit quaerat.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas nulla sed quae? Explicabo harum modi repellendus dolorem reiciendis, odio sunt voluptas veritatis error totam similique accusantium beatae, qui odit quaerat.</p>
         </div>
     </div>
 </div>
