--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -3,7 +3,6 @@
     padding-right: 120px;
     background-color: #1a1a1a;
     padding-bottom: 120px;
-
     .introBox {
         display: flex;
         justify-content: center;
@@ -11,7 +10,6 @@
         padding-top: 50px;
         padding-bottom: 50px;
         border-bottom: 1px solid #2dfcd8;
-
         div {
             width: 600px;
             text-align: center;
@@ -23,11 +21,9 @@
             margin-right: 16px;
         }
     }
-
     .storySection {
         padding-top: 50px;
         display: flex;
-
         .storyPart {
             width: 25%;
             display: flex;
@@ -36,19 +32,20 @@
             text-align: center;
             margin-left: 10px;
             margin-right: 10px;
-
             img {
                 width: 40px;
                 padding: 16px;
                 background-color: #2dfcd8;
                 border-radius: 50%;
+                cursor: pointer;
+                transition: transform 1s;
+                &:hover {
+                    transform: rotateZ(360deg);
+                }
             }
         }
     }
-
-
 }
-
 
 @media (max-width: 800px) {
     .container {
@@ -58,7 +55,6 @@
         flex-direction: column;
         padding-top: 0;
         border: none !important;
-
         div {
             margin-bottom: 16px;
             width: 80vw !important;
@@ -74,7 +70,6 @@
         align-items: center;
         padding-left: 10px;
         padding-right: 10px;
-
         .storyPart {
             width: 100% !important;
         }
