--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,3 @@
 <app-menu></app-menu>
-<app-banner></app-banner>
-<app-skills></app-skills>
-<app-projects></app-projects>
-<app-about></app-about>
-<app-contact></app-contact>
+<router-outlet></router-outlet>
 <app-footer></app-footer>
