--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container fadeIn">
     <div class="box">
         <div class="greet">
             <h1>Hi,<br> I'm <span>Mustafa</span> Gür<br> Front End develop<span>e</span>r</h1>
@@ -8,5 +8,5 @@
             <img src="../../assets/img/img3.jpg">
         </div>
     </div>
-    <!-- <div class="arrowBox"><span>&#709;</span></div> -->
+    <div class="arrowBox"><a href="#skills">&#709;</a></div>
 </div>
