--- a/src/app/banner/banner.component.scss
+++ b/src/app/banner/banner.component.scss
@@ -2,17 +2,15 @@
     padding-left: 120px;
     padding-right: 120px;
     padding-top: 120px;
-    max-width: 1920px;
-
+    height: calc(100vh - 120px);
+    // max-width: 1920px;
     .box {
         display: flex;
         justify-content: space-between;
-
         h1 {
             margin-bottom: 80px;
         }
     }
-
     img {
         width: 250px;
         border-radius: 50%;
@@ -23,7 +21,6 @@
     span:last-of-type {
         color: #2DFCD8;
     }
-
     a {
         padding: 20px 60px;
         text-decoration: none;
@@ -32,48 +29,61 @@
         border: 1px solid #2DFCD8;
         cursor: pointer;
     }
-
     a:hover {
         background-color: #2DFCD8;
         color: white;
         transition: all 225ms ease-in-out;
     }
-
     .arrowBox {
         display: flex;
         justify-content: center;
-        margin-top: 50px;
-        margin-bottom: 50px;
-
-        span {
+        position: absolute;
+        left: 50%;
+        bottom: 30px;
+        a {
             color: white;
             font-size: 30px;
             border: 1px solid white;
             border-radius: 50%;
             padding: 10px 20px;
             cursor: pointer;
+            &:hover {
+                background-color: white;
+                color: #FA2759;
+            }
         }
     }
 }
 
+.fadeIn {
+    animation: fadeInAnimation 1.3s ease-in-out;
+}
+
+@keyframes fadeInAnimation {
+    from {
+        opacity: 0;
+        transform: translateY(-30px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
 @media (max-width: 850px) {
-    
     .box {
         flex-direction: column-reverse;
         align-items: center;
         justify-content: unset;
         padding-bottom: 25px;
-
         .greet {
             display: flex;
             justify-content: center;
             flex-direction: column;
-
             h1 {
                 margin-bottom: 45px;
             }
-
-            a{
+            a {
                 text-align: center;
             }
         }
