--- a/src/app/imprint/imprint.component.html
+++ b/src/app/imprint/imprint.component.html
@@ -1,14 +1,4 @@
-<!-- <h1>Impressum</h1>
-Mustafa Gür <br>
-Werinherstr. 12 <br>
-<br>
-vertretungsberechtigte Gesellschafter: Mustafa <br>
-Gür<br>
-Telefon: +49 176 24899531 <br>
-<br>
-E-Mail: mustafaguer@outlook.com -->
-
-<div class='impressum'>
+<div class='container'>
     <h1>Impressum</h1>
     <p>Angaben gemäß § 5 TMG</p>
     <p>Mustafa Gür <br> Werinherstr.12
