--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -1,4 +1,4 @@
-<section class="container">
+<section id="skills" class="container">
     <h2>My Skills</h2>
     <div class="skillContainer">
         <div class="skillBoxes">
