--- a/src/app/skills/skills.component.scss
+++ b/src/app/skills/skills.component.scss
@@ -4,12 +4,10 @@
     align-items: center;
     background-color: #1a1a1a;
     padding-bottom: 50px;
-
     h2 {
         margin-top: 32px;
         margin-bottom: 50px;
     }
-
     img {
         width: 30px;
         padding: 16px;
@@ -17,13 +15,11 @@
         border-radius: 50%;
         background-color: white;
     }
-
     .skillContainer {
         display: flex;
         flex-wrap: wrap;
         max-width: 672px;
     }
-
     .skillBoxes {
         width: 200px;
         height: 100px;
@@ -34,33 +30,41 @@
         flex-direction: column;
         justify-content: flex-start;
         align-items: center;
-
+        cursor: default;
+        &:hover {
+            animation: ZoomIn 1s ease-in-out;
+        }
         span {
             color: black;
             margin-top: 10px;
         }
-
         img {
             margin-top: -30px;
-            box-shadow: 0 0 10px 2px rgba(0,0,0,0.4);
+            box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.4);
         }
+    }
+}
+
+@keyframes ZoomIn {
+    from {
+        transform: scale(1);
+    }
+    to {
+        transform: scale(1.2);
     }
 }
 
 @media (max-width: 700px) {
     .skillContainer {
-        max-width: 372px !important; 
+        max-width: 372px !important;
         justify-content: center;
-        
         .skillBoxes {
             width: 100px;
             height: 75px;
-
             span {
                 margin-top: 4px;
                 text-align: center;
             }
-
             img {
                 width: 20px;
                 padding: 10px;
