--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -4,33 +4,45 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-
     h2 {
         text-align: center;
     }
-
     .previews {
         padding-top: 50px;
         max-width: 1108px;
         display: flex;
         flex-wrap: wrap;
-
         .preview {
             margin-left: 27px;
             margin-right: 27px;
             margin-bottom: 27px;
-
-
+            a {
+                position: relative;
+                text-decoration: none;
+                color: white;
+            }
             img {
                 width: 500px;
                 height: 400px;
                 object-fit: cover;
-
+                border-radius: 15px;
+                box-shadow: 0 0 0 0 black;
                 &:hover {
                     animation: zoomIn 1s ease;
+                    box-shadow: 0px 0px 12px 5px white;
+                    transition: box-shadow 425ms ease-in-out;
                 }
             }
         }
+    }
+}
+
+@keyframes zoomIn {
+    from {
+        transform: scale(1);
+    }
+    to {
+        transform: scale(1.1);
     }
 }
 
@@ -42,19 +54,9 @@
 
 @media (max-width: 450px) {
     .preview {
-
         img {
             width: 250px !important;
             height: 250px !important;
         }
-    }
-}
-
-@keyframes zoomIn {
-    from {
-        transform: scale(1);
-    }
-    to {
-        transform: scale(0.9);
     }
 }
