--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -2,45 +2,46 @@
     <h2>My Skills</h2>
     <div class="skillContainer">
         <div class="skillBoxes">
-            <img src="../../assets/img/javascript-icon.png">
+            <div class="skillImgBox">
+                <img src="../../assets/img/javascript-icon.png">
+            </div>
             <span>JavaScript</span>
         </div>
         <div class="skillBoxes">
-            <img src="../../assets/img/angular2.png">
+            <div class="skillImgBox">
+                <img src="../../assets/img/angular2.png">
+            </div>
             <span>Angular</span>
         </div>
         <div class="skillBoxes">
-            <img src="../../assets/img/java script.png">
+            <div class="skillImgBox">
+                <img src="../../assets/img/java script.png">
+            </div>
             <span>HTML</span>
         </div>
         <div class="skillBoxes">
-            <img src="../../assets//img/Group 205.png">
+            <div class="skillImgBox">
+                <img src="../../assets//img/Group 205.png">
+            </div>
             <span>CSS</span>
         </div>
         <div class="skillBoxes">
-            <img src="../../assets/img/Group 226.png">
+            <div class="skillImgBox">
+                <img src="../../assets/img/Group 226.png">
+            </div>
             <span>SCRUM</span>
         </div>
         <div class="skillBoxes">
-            <img src="../../assets/img/Git-Icon-1788C 2.png">
+            <div class="skillImgBox">
+                <img src="../../assets/img/Git-Icon-1788C 2.png">
+            </div>
             <span>Git</span>
         </div>
         <div class="skillBoxes">
-            <img src="../../assets/img/Group 20.png">
-            <span>Desing Thinking</span>
-        </div>
-        <div class="skillBoxes">
-            <img src="../../assets/img/icons8-rest-api-80 2.png">
+            <div class="skillImgBox">
+                <img src="../../assets/img/icons8-rest-api-80 2.png">
+            </div>
             <span>Rest API</span>
         </div>
-        <div class="skillBoxes">
-            <img src="../../assets/img/icons8-test-lab-96 2.png">
-            <span>Test Automation</span>
-        </div>
-        <div class="skillBoxes">
-            <img src="../../assets/img/icons8-database-52 2.png">
-            <span>Databases</span>
-        </div>
-
     </div>
 </section>
