--- a/src/app/skills/skills.component.scss
+++ b/src/app/skills/skills.component.scss
@@ -10,15 +10,22 @@
     }
     img {
         width: 30px;
-        padding: 16px;
-        border: 1px solid white;
-        border-radius: 50%;
-        background-color: white;
     }
     .skillContainer {
         display: flex;
         flex-wrap: wrap;
         max-width: 672px;
+    }
+    .skillImgBox {
+        width: 60px;
+        background-color: white;
+        height: 60px;
+        margin-top: -30px;
+        display: flex;
+        align-items: center;
+        box-shadow: 0 0 10px 2px rgb(0 0 0 / 40%);
+        justify-content: center;
+        border-radius: 50%;
     }
     .skillBoxes {
         width: 200px;
@@ -38,10 +45,6 @@
             color: black;
             margin-top: 10px;
         }
-        img {
-            margin-top: -30px;
-            box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.4);
-        }
     }
 }
 
@@ -56,20 +59,6 @@
 
 @media (max-width: 700px) {
     .skillContainer {
-        max-width: 372px !important;
         justify-content: center;
-        .skillBoxes {
-            width: 100px;
-            height: 75px;
-            span {
-                margin-top: 4px;
-                text-align: center;
-            }
-            img {
-                width: 20px;
-                padding: 10px;
-                margin-top: -20px;
-            }
-        }
     }
 }
