--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,25 +1,38 @@
 <div id="portfolio" class="container">
     <h2>My Works</h2>
+    <div class="lists">
+        <div class="linkBox"><a href="#">All</a></div>
+        <div class="linkBox"><a href="#">Angular</a></div>
+        <div class="linkBox"><a href="#">Java Script</a></div>
+    </div>
     <div class="previews">
-        <div class="preview">
-            <a target="_blank" href="http://mustafa-guer.developerakademie.com/Pokedex/index.html">
-                <img src="../../assets/img/pokedex.jpg">
-            </a>
+        <div id="sharkie" class="preview">
+            <div class="description">
+                <h3>Sharkie</h3>
+                <p>Javascript based game</p>
+                <a target="_blank" href="http://mustafa-guer.developerakademie.com/SHARKIE/index.html">Try Out</a>
+            </div>
         </div>
-        <div class="preview">
-            <a target="_blank" href="http://mustafa-guer.developerakademie.com/SHARKIE/index.html">
-                <img src="../../assets/img/sharkie.png">
-            </a>
+        <div id="elPolloLocco" class="preview">
+            <div class="description">
+                <h3>El Pollo Locco</h3>
+                <p>Javascript based Jump and Run Game</p>
+                <a target="_blank" href="http://mustafa-guer.developerakademie.com/EL_POLLO_LOCO/index.html">Try Out</a>
+            </div>
         </div>
-        <div class="preview">
-            <a target="_blank" href="http://mustafa-guer.developerakademie.com/EL_POLLO_LOCO/index.html">
-                <img src="../../assets/img/elpolloloco.png">
-            </a>
+        <div id="pokedex" class="preview">
+            <div class="description">
+                <h3>Pokedex</h3>
+                <p>Work with API</p>
+                <a target="_blank" href="http://mustafa-guer.developerakademie.com/Pokedex/index.html">Try Out</a>
+            </div>
         </div>
-        <div class="preview">
-            <a target="_blank" href="http://mustafa-guer.developerakademie.com/Join/html/login-submit.html">
-                <img src="../../assets/img/join.PNG">
-            </a>
+        <div id="join" class="preview">
+            <div class="description">
+                <h3>Join</h3>
+                <p>Canban Board</p>
+                <a target="_blank" href="http://mustafa-guer.developerakademie.com/Join/html/login-submit.html">Try Out</a>
+            </div>
         </div>
     </div>
 </div>
