--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -7,6 +7,32 @@
     h2 {
         text-align: center;
     }
+    .lists {
+        display: flex;
+        .linkBox {
+            width: 100px;
+            height: 50px;
+            border: 1px solid #FA2759;
+            margin-left: 4px;
+            margin-right: 4px;
+            &:hover {
+                background-color: #FA2759;
+            }
+            a {
+                text-decoration: none;
+                color: #FA2759;
+                width: 100%;
+                height: 100%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                &:hover {
+                    color: white;
+                }
+            }
+            transition: all 225ms ease;
+        }
+    }
     .previews {
         padding-top: 50px;
         max-width: 1108px;
@@ -16,10 +42,57 @@
             margin-left: 27px;
             margin-right: 27px;
             margin-bottom: 27px;
-            img {
-                width: 500px;
-                height: 400px;
-                object-fit: cover;
+            width: 500px;
+            height: 400px;
+            background-size: cover;
+            background-position: center;
+        }
+        #sharkie {
+            background-image: url("../../assets/img/sharkie.png");
+        }
+        #elPolloLocco {
+            background-image: url("../../assets/img/elpolloloco.png");
+        }
+        #pokedex {
+            background-image: url("../../assets/img/pokedex.jpg");
+        }
+        #join {
+            background-image: url("../../assets/img/join.PNG");
+        }
+        a {
+            text-decoration: none;
+            color: black;
+        }
+        .description {
+            opacity: 0;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            background-color: rgba(255, 255, 255, 0.7);
+            transition: opacity 225ms ease-in-out;
+            &:hover {
+                opacity: 1;
+                transition: opacity 225ms ease-in-out;
+            }
+            h3 {
+                color: #FA2759;
+            }
+            p {
+                color: #1A1A1A;
+                margin-bottom: 90px;
+            }
+            h3,
+            p {
+                cursor: default;
+            }
+            a {
+                color: #FA2759;
+                font-weight: bold;
+                border: 1px solid #FA2759;
+                padding: 15px 25px;
+                background-color: white;
             }
         }
     }
@@ -31,11 +104,23 @@
     }
 }
 
+@media (max-width: 600px) {
+    .preview {
+        width: 400px !important;
+        height: 300px !important;
+        margin: 0 !important;
+        margin-bottom: 20px !important;
+    }
+    .description {
+        p {
+            margin-bottom: 20px !important;
+        }
+    }
+}
+
 @media (max-width: 450px) {
     .preview {
-        img {
-            width: 250px !important;
-            height: 250px !important;
-        }
+        width: 300px !important;
+        height: 200px !important;
     }
 }
