--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,6 +1,6 @@
 <div id="about" class="container">
     <div class="introBox">
-        <img src="../../assets/img/img3.jpg">
+        <img src="assets/img/img3.jpg">
         <div>
             <h2>About Me</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur mollitia beatae tempora necessitatibus, fugit, dolore quasi quaerat.</p>
@@ -8,22 +8,22 @@
     </div>
     <div class="storySection">
         <div class="storyPart">
-            <img src="../../assets/img/walk-line.png">
+            <img src="assets/img/walk-line.png">
             <h3>MY JOURNEY BEGAN</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas nulla sed quae? Explicabo harum modi repellendus dolorem reiciendis, odio sunt voluptas veritatis error totam similique accusantium beatae, qui odit quaerat.</p>
         </div>
         <div class="storyPart">
-            <img src="../../assets/img/heart-line.png">
+            <img src="assets/img/heart-line.png">
             <h3>MY JOURNEY BEGAN</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas nulla sed quae? Explicabo harum modi repellendus dolorem reiciendis, odio sunt voluptas veritatis error totam similique accusantium beatae, qui odit quaerat.</p>
         </div>
         <div class="storyPart">
-            <img src="../../assets/img/search-line.png">
+            <img src="assets/img/search-line.png">
             <h3>MY JOURNEY BEGAN</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas nulla sed quae? Explicabo harum modi repellendus dolorem reiciendis, odio sunt voluptas veritatis error totam similique accusantium beatae, qui odit quaerat.</p>
         </div>
         <div class="storyPart">
-            <img src="../../assets/img/flight-takeoff-line.png">
+            <img src="assets/img/flight-takeoff-line.png">
             <h3>MY JOURNEY BEGAN</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas nulla sed quae? Explicabo harum modi repellendus dolorem reiciendis, odio sunt voluptas veritatis error totam similique accusantium beatae, qui odit quaerat.</p>
         </div>
