--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -5,7 +5,7 @@
             <a href="mailto:mustafaguer@outlook.com" title="Send Email">Contact me</a>
         </div>
         <div class="photoBox">
-            <img src="../../assets/img/img3.jpg">
+            <img src="assets/img/img3.jpg">
         </div>
     </div>
     <div class="arrowBox"><a href="#skills">&#709;</a></div>
