--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -3,43 +3,43 @@
     <div class="skillContainer">
         <div class="skillBoxes">
             <div class="skillImgBox">
-                <img src="../../assets/img/javascript-icon.png">
+                <img src="assets/img/javascript-icon.png">
             </div>
             <span>JavaScript</span>
         </div>
         <div class="skillBoxes">
             <div class="skillImgBox">
-                <img src="../../assets/img/angular2.png">
+                <img src="assets/img/angular2.png">
             </div>
             <span>Angular</span>
         </div>
         <div class="skillBoxes">
             <div class="skillImgBox">
-                <img src="../../assets/img/java script.png">
+                <img src="assets/img/java script.png">
             </div>
             <span>HTML</span>
         </div>
         <div class="skillBoxes">
             <div class="skillImgBox">
-                <img src="../../assets//img/Group 205.png">
+                <img src="assets//img/Group 205.png">
             </div>
             <span>CSS</span>
         </div>
         <div class="skillBoxes">
             <div class="skillImgBox">
-                <img src="../../assets/img/Group 226.png">
+                <img src="assets/img/Group 226.png">
             </div>
             <span>SCRUM</span>
         </div>
         <div class="skillBoxes">
             <div class="skillImgBox">
-                <img src="../../assets/img/Git-Icon-1788C 2.png">
+                <img src="assets/img/Git-Icon-1788C 2.png">
             </div>
             <span>Git</span>
         </div>
         <div class="skillBoxes">
             <div class="skillImgBox">
-                <img src="../../assets/img/icons8-rest-api-80 2.png">
+                <img src="assets/img/icons8-rest-api-80 2.png">
             </div>
             <span>Rest API</span>
         </div>
