--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -9,7 +9,7 @@
     <div class="storySection">
         <div class="storyPart">
             <img src="assets/img/walk-line.png">
-            <h3>MY JOURNEY BEGAN Test</h3>
+            <h3>MY JOURNEY BEGAN</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas nulla sed quae? Explicabo harum modi repellendus dolorem reiciendis, odio sunt voluptas veritatis error totam similique accusantium beatae, qui odit quaerat.</p>
         </div>
         <div class="storyPart">
