dynamised skills and projects

--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -6,32 +6,11 @@
         <div class="linkBox"><a href="#">Java Script</a></div>
     </div>
     <div class="previews">
-        <div id="sharkie" class="preview">
+        <div *ngFor="let p of projects"  id="{{ p.id }}" class="preview">
             <div class="description">
-                <h3>Sharkie</h3>
-                <p>Javascript based game</p>
-                <a target="_blank" href="http://mustafa-guer.developerakademie.com/SHARKIE/index.html">Try Out</a>
-            </div>
-        </div>
-        <div id="elPolloLocco" class="preview">
-            <div class="description">
-                <h3>El Pollo Locco</h3>
-                <p>Javascript based Jump and Run Game</p>
-                <a target="_blank" href="http://mustafa-guer.developerakademie.com/EL_POLLO_LOCO/index.html">Try Out</a>
-            </div>
-        </div>
-        <div id="pokedex" class="preview">
-            <div class="description">
-                <h3>Pokedex</h3>
-                <p>Work with API</p>
-                <a target="_blank" href="http://mustafa-guer.developerakademie.com/Pokedex/index.html">Try Out</a>
-            </div>
-        </div>
-        <div id="join" class="preview">
-            <div class="description">
-                <h3>Join</h3>
-                <p>Canban Board</p>
-                <a target="_blank" href="http://mustafa-guer.developerakademie.com/Join/html/login-submit.html">Try Out</a>
+                <h3>{{ p.name }}</h3>
+                <p>{{ p.description }}</p>
+                <a target="_blank" href="{{ p.link }}">Try Out</a>
             </div>
         </div>
     </div>
