--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -47,6 +47,7 @@
             background-size: cover;
             background-position: center;
         }
+
         #sharkie {
             background-image: url("../../assets/img/sharkie.png");
         }
@@ -57,8 +58,15 @@
             background-image: url("../../assets/img/pokedex.jpg");
         }
         #join {
-            background-image: url("../../assets/img/join.PNG");
+            background-image: url("../../assets/img/kanban.jpg");
         }
+        #ringoffire {
+            background-image: url("../../assets/img/ringofffire.jpg");
+        }
+        #simplecrm {
+            background-image: url("../../assets/img/business.jpg");
+        }
+
         a {
             text-decoration: none;
             color: black;
