--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -7,128 +7,62 @@
     h2 {
         text-align: center;
     }
-    .lists {
+}
+
+.lists {
+    display: flex;
+}
+
+.linkBox {
+    width: 100px;
+    height: 50px;
+    border: 1px solid #fa2759;
+    margin-left: 4px;
+    margin-right: 4px;
+    background: transparent;
+    color: white;
+    cursor: pointer;
+    &:hover {
+        background-color: #fa2759;
+    }
+    a {
+        text-decoration: none;
+        color: #fa2759;
+        width: 100%;
+        height: 100%;
         display: flex;
-        .linkBox {
-            width: 100px;
-            height: 50px;
-            border: 1px solid #FA2759;
-            margin-left: 4px;
-            margin-right: 4px;
-            &:hover {
-                background-color: #FA2759;
-            }
-            a {
-                text-decoration: none;
-                color: #FA2759;
-                width: 100%;
-                height: 100%;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                &:hover {
-                    color: white;
-                }
-            }
-            transition: all 225ms ease;
+        justify-content: center;
+        align-items: center;
+        &:hover {
+            color: white;
         }
     }
-    .previews {
-        padding-top: 50px;
-        max-width: 1108px;
-        display: flex;
-        flex-wrap: wrap;
-        .preview {
-            margin-left: 27px;
-            margin-right: 27px;
-            margin-bottom: 27px;
-            width: 500px;
-            height: 400px;
-            background-size: cover;
-            background-position: center;
-        }
+    transition: all 225ms ease;
+}
 
-        #sharkie {
-            background-image: url("../../assets/img/sharkie.png");
-        }
-        #elPolloLocco {
-            background-image: url("../../assets/img/elpolloloco.png");
-        }
-        #pokedex {
-            background-image: url("../../assets/img/pokedex.jpg");
-        }
-        #join {
-            background-image: url("../../assets/img/kanban.jpg");
-        }
-        #ringoffire {
-            background-image: url("../../assets/img/ringofffire.jpg");
-        }
-        #simplecrm {
-            background-image: url("../../assets/img/business.jpg");
-        }
+.previews {
+    padding-top: 50px;
+    max-width: 1108px;
+    display: flex;
+    flex-wrap: wrap;
+}
 
-        a {
-            text-decoration: none;
-            color: black;
-        }
-        .description {
-            opacity: 0;
-            height: 100%;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            background-color: rgba(255, 255, 255, 0.7);
-            transition: opacity 225ms ease-in-out;
-            &:hover {
-                opacity: 1;
-                transition: opacity 225ms ease-in-out;
-            }
-            h3 {
-                color: #FA2759;
-            }
-            p {
-                color: #1A1A1A;
-                margin-bottom: 90px;
-            }
-            h3,
-            p {
-                cursor: default;
-            }
-            a {
-                color: #FA2759;
-                font-weight: bold;
-                border: 1px solid #FA2759;
-                padding: 15px 25px;
-                background-color: white;
-            }
-        }
-    }
+.diff-projects-container {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.active {
+    background-color: #fa2759 !important;
 }
 
 @media (max-width: 1124px) {
     .previews {
         justify-content: center;
     }
-}
-
-@media (max-width: 600px) {
-    .preview {
-        width: 400px !important;
-        height: 300px !important;
-        margin: 0 !important;
-        margin-bottom: 20px !important;
-    }
-    .description {
-        p {
-            margin-bottom: 20px !important;
-        }
+    .diff-projects-container {
+        justify-content: center;
     }
 }
 
-@media (max-width: 450px) {
-    .preview {
-        width: 300px !important;
-        height: 200px !important;
-    }
-}
+
