added new project

--- a/src/app/projects-javascript/projects-javascript.component.scss
+++ b/src/app/projects-javascript/projects-javascript.component.scss
@@ -54,6 +54,9 @@
 #join {
     background-image: url("../../assets/img/kanban.jpg");
 }
+#quizapp {
+    background-image: url("../../assets/img/quiz.jpg");
+}
 
 
 @media (max-width: 600px) {
