first letters in the about section

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -3,29 +3,29 @@
         <img src="assets/img/img3.jpg">
         <div>
             <h2>About Me</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur mollitia beatae tempora necessitatibus, fugit, dolore quasi quaerat.</p>
+            <p>Exited from Coding</p>
         </div>
     </div>
     <div class="storySection">
         <div class="storyPart">
             <img src="assets/img/walk-line.png">
             <h3>MY JOURNEY BEGAN</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas nulla sed quae? Explicabo harum modi repellendus dolorem reiciendis, odio sunt voluptas veritatis error totam similique accusantium beatae, qui odit quaerat.</p>
+            <p>As I found the Developer Akademie on Youtube.</p>
         </div>
         <div class="storyPart">
             <img src="assets/img/heart-line.png">
-            <h3>MY JOURNEY BEGAN</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas nulla sed quae? Explicabo harum modi repellendus dolorem reiciendis, odio sunt voluptas veritatis error totam similique accusantium beatae, qui odit quaerat.</p>
+            <h3>I LOVE CODING</h3>
+            <p>After the Second Week I created my first own Website. That was awesome.</p>
         </div>
         <div class="storyPart">
             <img src="assets/img/search-line.png">
-            <h3>MY JOURNEY BEGAN</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas nulla sed quae? Explicabo harum modi repellendus dolorem reiciendis, odio sunt voluptas veritatis error totam similique accusantium beatae, qui odit quaerat.</p>
+            <h3>EVERYTIME LEARN</h3>
+            <p>It was fascinating how much things I've learned in the past 3 months.</p>
         </div>
         <div class="storyPart">
             <img src="assets/img/flight-takeoff-line.png">
-            <h3>MY JOURNEY BEGAN</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas nulla sed quae? Explicabo harum modi repellendus dolorem reiciendis, odio sunt voluptas veritatis error totam similique accusantium beatae, qui odit quaerat.</p>
+            <h3>THE REAL JOURNEY</h3>
+            <p>Starts now.</p>
         </div>
     </div>
 </div>
