--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -37,6 +37,11 @@
                 padding: 16px;
                 background-color: #2dfcd8;
                 border-radius: 50%;
+                transition: transform 1s;
+
+                &:hover {
+                    transform: rotateZ(360deg);
+                }
             }
         }
     }
