fixed image height and distance to the sides

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -15,7 +15,7 @@
         <div class="storyPart">
             <img src="assets/img/heart-line.png">
             <h3>I LOVE CODING</h3>
-            <p>After the Second Week I created my first own Website. That was awesome.</p>
+            <p>After the First Week I've created my first own Website. That was awesome.</p>
         </div>
         <div class="storyPart">
             <img src="assets/img/search-line.png">
