--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -17,6 +17,8 @@
         }
         img {
             width: 250px;
+            height: 250px;
+            object-fit: cover;
             border-radius: 50%;
             margin-right: 16px;
         }
