--- a/src/app/banner/banner.component.scss
+++ b/src/app/banner/banner.component.scss
@@ -1,18 +1,20 @@
 .container {
     padding-left: 120px;
     padding-right: 120px;
-    padding-top: 120px;
+    padding-top: 200px;
     height: calc(100vh - 120px);
     // max-width: 1920px;
     .box {
         display: flex;
-        justify-content: space-between;
+        justify-content: space-evenly;
         h1 {
             margin-bottom: 80px;
         }
     }
     img {
-        width: 250px;
+        width: 300px;
+        height: 300px;
+        object-fit: cover;
         border-radius: 50%;
     }
     span:first-of-type {
@@ -86,6 +88,11 @@
             a {
                 text-align: center;
             }
+        }
+
+        img {
+            width: 250px;
+            height: 250px;
         }
     }
     .arrowBox {
