--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -66,6 +66,7 @@
         img {
             margin-top: 16px;
             width: 200px;
+            height: 200px;
         }
     }
     .storySection {
