added burrito company

--- a/src/app/projects-javascript/projects-javascript.component.scss
+++ b/src/app/projects-javascript/projects-javascript.component.scss
@@ -45,8 +45,8 @@
 #sharkie {
     background-image: url("../../assets/img/sharkie.png");
 }
-#elPolloLocco {
-    background-image: url("../../assets/img/elpolloloco.png");
+#burritocompany {
+    background-image: url("../../assets/img/burritocompany.jpg");
 }
 #pokedex {
     background-image: url("../../assets/img/pokedex.jpg");
