added 2 new angular p

--- a/src/app/projects-angular/projects-angular.component.scss
+++ b/src/app/projects-angular/projects-angular.component.scss
@@ -48,6 +48,12 @@
 #simplecrm {
     background-image: url("../../assets/img/business.jpg");
 }
+#burritocompany {
+    background-image: url("../../assets/img/burrito.png");
+}
+#doctordatabase {
+    background-image: url("../../assets/img/favicon.png");
+}
 
 @media (max-width: 600px) {
     .preview {
