added new project and img

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,16 +1,21 @@
 <div id="about" class="container">
     <div class="introBox">
-        <img src="assets/img/img3.jpg">
+        <img src="assets/img/myimg2.jpg">
         <div>
             <h2>About Me</h2>
-            <p>...</p>
+            <p>I am 32 Years old and are managing my own Taxi Limousineservice based in Munich. After the Pandemic
+                affected so strong into my Life I did
+                decide to go back to the roots in the IT.
+                Over the last Year I've collected practical knowledge in the Front-End-Development and build a lot of
+                Projects and now
+                I'm looking for new Challenges in the Front-End-Webdevelopment</p>
         </div>
     </div>
     <div class="storySection">
         <div class="storyPart">
             <img src="assets/img/walk-line.png">
             <h3>MY JOURNEY BEGAN</h3>
-            <p>As I found the Developer Akademie on Youtube.</p>
+            <p>As I saw the Developer Akademie Videos on Youtube. After a nice call I decided to learn Coding</p>
         </div>
         <div class="storyPart">
             <img src="assets/img/heart-line.png">
@@ -20,12 +25,12 @@
         <div class="storyPart">
             <img src="assets/img/search-line.png">
             <h3>EVERYTIME LEARN</h3>
-            <p>It was fascinating how much things I've learned in the past 3 months.</p>
+            <p>It was fascinating how much things goes easier with Programming.</p>
         </div>
         <div class="storyPart">
             <img src="assets/img/flight-takeoff-line.png">
             <h3>THE REAL JOURNEY</h3>
-            <p>Starts now.</p>
+            <p>Starts now. I'm looking forward for new Challenges and work with you.</p>
         </div>
     </div>
 </div>
