--- a/src/app/projects-angular/projects-angular.component.scss
+++ b/src/app/projects-angular/projects-angular.component.scss
@@ -54,6 +54,9 @@
 #doctordatabase {
     background-image: url("../../assets/img/favicon.png");
 }
+#musgkanban {
+    background-image: url("../../assets/img/kanban.png");
+}
 
 @media (max-width: 600px) {
     .preview {
