--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -35,10 +35,11 @@
     div {
         text-align: center;
         margin-left: 16px;
+        width: 50%;
     }
     img {
-        width: 250px;
-        height: 250px;
+        width: 300px;
+        height: 300px;
         object-fit: cover;
         border-radius: 50%;
         margin-right: 16px;
