--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -3,34 +3,32 @@
         <img src="assets/img/myimg2.jpg">
         <div>
             <h2>About Me</h2>
-            <p>I am 32 Years old and are managing my own Taxi Limousineservice based in Munich. After the Pandemic
-                affected so strong into my Life I did
-                decide to go back to the roots in the IT.
-                Over the last Year I've collected practical knowledge in the Front-End-Development and build a lot of
-                Projects and now
-                I'm looking for new Challenges in the Front-End-Webdevelopment</p>
+            <p>I am 32 years old and are managing my own Taxi Limousineservice based in Munich. After the pandemic
+                affected so strong into my Life I did decide to go back to my roots in IT. Over the last year i built a
+                variety of Front-End projects from simple website to complex web apps. Now I'm looking for new
+                challenges in Front-End-Web development.</p>
         </div>
     </div>
     <div class="storySection">
         <div class="storyPart">
             <img src="assets/img/walk-line.png">
-            <h3>MY JOURNEY BEGAN</h3>
-            <p>As I saw the Developer Akademie Videos on Youtube. After a nice call I decided to learn Coding</p>
+            <h3>...</h3>
+            <p>...</p>
         </div>
         <div class="storyPart">
             <img src="assets/img/heart-line.png">
-            <h3>I LOVE CODING</h3>
-            <p>After the First Week I've created my first own Website. That was awesome.</p>
+            <h3>...</h3>
+            <p>...</p>
         </div>
         <div class="storyPart">
             <img src="assets/img/search-line.png">
-            <h3>EVERYTIME LEARN</h3>
-            <p>It was fascinating how much things goes easier with Programming.</p>
+            <h3>...</h3>
+            <p>...</p>
         </div>
         <div class="storyPart">
             <img src="assets/img/flight-takeoff-line.png">
-            <h3>THE REAL JOURNEY</h3>
-            <p>Starts now. I'm looking forward for new Challenges and work with you.</p>
+            <h3>...</h3>
+            <p>...</p>
         </div>
     </div>
 </div>
