--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -41,6 +41,7 @@
         width: 300px;
         height: 300px;
         object-fit: cover;
+        object-position: 50% 30%;
         border-radius: 50%;
         margin-right: 16px;
     }
