--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -4,17 +4,18 @@
         <p>Get in touch via the form below, or by emailing <a
                 href="mailto:mustafaguer@outlook.com">mustafaguer@outlook.com</a></p>
 
-        <form method="POST" action="http://mustafa-guer.developerakademie.com/SEND_MAIL/send_mail.php" onsubmit="sendEmail(); return false" class="contactForm">
+        <form #myForm="ngForm" (ngSubmit)="onSubmit(myForm)" ngNativeValidate novalidate class="contactForm">
 
             <label for="name">Name</label>
-            <input id="name" name="name" required type="text" placeholder="Enter your Name">
+            <input id="name" placeholder="Enter your Name" name="name" ngModel #name="ngModel" required>
             <label for="email" name="email">Email address</label>
-            <input id="email" required type="email" placeholder="Enter your Email address">
+            <input id="email" placeholder="Enter your Email address" type="email" name="email" ngModel #email="ngModel" required>
             <label for="message" name="message">Message</label>
-            <textarea id="message" type="text" rows="8" placeholder="Enter your Message"></textarea>
+            <textarea id="message" placeholder="Enter your Message" name="message" ngModel #message="ngModel" rows="8" required></textarea>
             <div>
-                <input class="sendBtn" type="submit" value="Send">
+                <button [disabled]="!myForm.valid">SUBMIT</button>
             </div>
+            <div class="reportBox"><p>{{ submitReport }}</p></div>
         </form>
     </div>
 </div>
