--- a/src/app/projects-angular/projects-angular.component.html
+++ b/src/app/projects-angular/projects-angular.component.html
@@ -2,6 +2,6 @@
     <div class="description">
         <h3>{{ p.name }}</h3>
         <p>{{ p.description }}</p>
-        <a target="_blank" href="{{ p.link }}">Try Out</a>
+        <a target="_blank" href="{{ p.link }}">"Try it Out!"</a>
     </div>
 </div>
