--- a/src/app/projects-javascript/projects-javascript.component.scss
+++ b/src/app/projects-javascript/projects-javascript.component.scss
@@ -57,6 +57,9 @@
 #quizapp {
     background-image: url("../../assets/img/quiz.jpg");
 }
+#postserver {
+    background-image: url("../../assets/img/postserver.png");
+}
 
 
 @media (max-width: 600px) {
